--- a/manifest.json
+++ b/manifest.json
@@ -9,7 +9,7 @@
     "persistent": false
   },
   "page_action": {
-    "default_icon": "icon.png",
+    "default_icon": "icon_icon.png",
     "default_popup": "index.html"
   },
   "permissions": [
